# teaclave-sgx-sdk-hello-rust-vscode-debug-intel-sgx-ssl

./: .gitignore  Cargo.toml  Makefile  README.md  setup-intel-sgx-ssl.sh
app/: Cargo.toml  build.rs
app-ring/: Cargo.toml
app-ring/src/: main.rs  ring_ecc.rs
app/src/: main.rs  openssl.rs
docker/: Dockerfile
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs  openssl.rs  ring_ecc.rs
