[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
