[package]
name = "enclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2021"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", version = "1.1.6" }
ring = { git = "https://github.com/chaudhryfaisal/ring.git", branch = "0.17.8-teaclave-1.1.6", default-features = false, features = ["alloc"] }
